Some Refactoring and Developing